<resources>
    <string name="app_name">WeatherForcastApp</string>
    <!-- TODO: Remove or change this placeholder text -->

    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>


    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="userName">Username</string>
    <string name="password">Password</string>
    <string name="signin">Sign In</string>
    <string name="forgot_password">forgot password ?</string>
    <string name="gmail_login">Continue with G-Mail</string>
    <string name="continue_as">---------Continue as---------</string>
    <string name="weather_forecast">Weather Forecast</string>
    <string name="sign_in">Sign In</string>
    <string name="by_continue_you_agree_on_our_terms_and_conditions">by continue you agree on our terms and conditions</string>
    <string name="sign_up">Sign Up</string>
    <string name="by_signing_up_you_agree_on_our_terms">by signing up you agree on our terms</string>
    <string name="rePassword">Re-Enter Password</string>
    <string name="don_t_have_an_account_sign_up">Don\'t have an account ? sign up</string>
    <string name="log_out">Log out</string>
    <string name="alerts">Alerts</string>
    <string name="favorite">Favorite</string>
    <string name="settings">Settings</string>
    <string name="home">Home</string>
    <string name="locationTab">Location</string>
    <string name="advancedTab">Advanced</string>
    <string name="choose_your_location">Choose Your Location</string>
    <string name="long_press_to_choose_the_location">long press to choose the location</string>
    <string name="english">English</string>
    <string name="arabic">Arabic</string>
    <string name="language">Language</string>
    <string name="miles_hour">miles/hour</string>
    <string name="meter_sec">meter/sec</string>
    <string name="wind_speed_unit">Wind Speed Unit</string>
    <string name="fahrenheit">Fahrenheit</string>
    <string name="celsius">Celsius</string>
    <string name="kelvin">Kelvin</string>
    <string name="temperature_unit">Temperature Unit</string>
    <string name="degree">Degree</string>
    <string name="date">Date</string>
    <string name="humidity">Humidity</string>
    <string name="_00_00">00.00</string>
    <string name="wind">Wind</string>

    <string name="clouds">Clouds</string>
    <string name="ultra_violet">Ultra Violet</string>

    <string name="visibility">Visibility</string>
    <string name="pressure">Pressure</string>
    <string name="weather_state">Weather State</string>
    <string name="name_for_header">Name :</string>
    <string name="textview">TextView</string>
    <string name="manageCities">Manage</string>
    <string name="citiesTab">Cities</string>
    <string name="long_press_to_add_a_place">long press to add a place</string>
    <string name="add_favorite_from_map">Add Favorite From Map</string>
    <string name="manage_favorite_cities">Manage Favorite Cities</string>
    <string name="city_name_fav">City Name</string>
    <string name="add">Add</string>
    <string name="city_name">City Name</string>
    <string name="city_namex">City Name</string>
    <string name="click_on_item_to_switch_to_this_city">Click on item to switch to this city</string>
    <string name="long_press_to_remove_the_city">Long press to remove the city</string>
    <string name="favorite_cities">Favorite Cities</string>
    <string name="notification_with_sounds">notification with sounds</string>
    <string name="enable_alarm">enable alarm</string>
    <string name="allow_notifications">allow notifications</string>
    <string name="to">To :</string>
    <string name="from">From :</string>
    <string name="alarm">Alarm</string>
</resources>
