<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">




    <group  android:checkableBehavior="single">

        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home"
            android:title="@string/home" />

        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/settings"
            android:title="@string/settings" />

        <item
            android:id="@+id/nav_favorite"
            android:icon="@drawable/favorite"
            android:title="@string/favorite" />

        <item
            android:id="@+id/nav_alert"
            android:icon="@drawable/bell"
            android:title="@string/alerts" />

        <item
            android:id="@+id/nav_log_out"
            android:icon="@drawable/logout"
            android:title="@string/log_out" />


    </group>




</menu>