<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/frame1"
    tools:context=".auth.signup.view.SignUpFragment">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:text="@string/sign_up"
            android:textColor="#FFFFFF"
            android:textSize="34sp"
            android:textStyle="bold|italic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias=".500"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />



        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/usernameSignUpText"
            android:layout_width="300sp"
            android:layout_height="50sp"
            android:layout_marginTop="50dp"
            android:hint="@string/userName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias=".50"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/usernameSignupTextLine"
                android:layout_width="300sp"
                android:layout_height="50sp" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordSignUpText"
            android:layout_width="300sp"
            android:layout_height="50sp"
            android:layout_marginTop="50dp"
            android:hint="@string/password"
            app:endIconMode="password_toggle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias=".50"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/usernameSignUpText">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/passwordSignUpTextLine"
                android:layout_width="300sp"
                android:layout_height="50sp"
                android:inputType="textPassword"/>

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordAgainSignUpText"
            android:layout_width="300sp"
            android:layout_height="50sp"
            android:layout_marginTop="50dp"
            android:hint="@string/rePassword"
            app:endIconMode="password_toggle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias=".50"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/passwordSignUpText">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/passwordAgainSignUpTextLine"
                android:layout_width="300sp"
                android:layout_height="50sp"
                android:inputType="textPassword"/>

        </com.google.android.material.textfield.TextInputLayout>


        <CheckBox
            android:id="@+id/termsCheckBox"
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:layout_marginTop="40dp"
            android:text="@string/by_signing_up_you_agree_on_our_terms"
            android:textColor="#FFFFFF"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias=".500"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/passwordAgainSignUpText" />


        <Button
            android:id="@+id/signUpButton"
            android:layout_width="300sp"
            android:layout_height="40sp"
            android:layout_marginTop="40dp"
            android:background="@drawable/rounded_edge"
            android:text="@string/sign_up"
            android:textColor="#FFFFFF"
            android:textSize="16sp"
            android:textStyle="bold|italic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.507"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/termsCheckBox"
            app:rippleColor="#706C6C" />




    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>